fix for dist minified wrong color

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -26,7 +26,7 @@ paper-menu > div > a > i.icon {
   height: 24px;
   font-size: 24px;
   margin-right: 33px;
-  color: #11111187;
+  color: rgba(17, 17, 17, .53);
 }
 
 paper-menu > div > a.iron-selected > i.icon {
